force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>