force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__Field__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field</label>
    <type>Checkbox</type>
</CustomField>