force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldName__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>