force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldType__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>