force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>