force-app/main/default/objects/FieloEE__RuleCriteria__c/fields/FieloEE__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>FieloEE__Rule__c</referenceTo>
    <relationshipLabel>Rule Criterias</relationshipLabel>
    <relationshipName>RuleCriterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>