force-app/main/default/objects/FieloEE__RuleCriteria__c/validationRules/FieloEE__Empty_Field_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Empty_Field_Criteria</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Field__c &amp;&amp; ISBLANK( FieloEE__Values__c )</errorConditionFormula>
    <errorMessage>The criteria must have a field selected</errorMessage>
</ValidationRule>